tsc_result_err.txt
[eval]:1
const{execSync}=require( child_process\);try{execSync(\npx.cmd tsc --noEmit\,{cwd:\client\,timeout:180000,stdio:\pipe\});console.log(\TYPECHECK_PASS\)}catch(e){console.log(\TYPECHECK_FAIL\);console.log(e.stdout||\\);console.log(e.stderr||\\)} 
                         ^^^^^^^^^^^^^^
Expected unicode escape

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.13.0
